<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/americanflag"
    android:padding="16dp"
    tools:context="com.example.android.historyquiz.MainActivity">

    <RelativeLayout
        android:id="@+id/questions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/titleStyle"
            android:text="@string/title" />

        <LinearLayout
            android:id="@+id/question_block_1"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/title">


            <TextView
                android:id="@+id/question_1"
                style="@style/questionTheme"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                style="@style/radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_1" />

                <RadioButton
                    android:id="@+id/correctAnswer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer1_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_3" />

            </RadioGroup>

            <Button
                android:id="@+id/hintbutton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintOne"
                android:text="@string/Hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_2"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_1">

            <TextView
                android:id="@+id/question_2"
                style="@style/questionTheme"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                style="@style/radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_2" />

                <RadioButton
                    android:id="@+id/correctAnswer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer2_3" />

            </RadioGroup>

            <Button
                android:id="@+id/hintbutton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintTwo"
                android:text="@string/Hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_3"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_2">

            <TextView
                android:id="@+id/question_3"
                style="@style/questionTheme"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                style="@style/radioGroup">

                <RadioButton
                    android:id="@+id/correctAnswer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer3_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3_3" />

            </RadioGroup>

            <Button
                android:id="@+id/hintbutton_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintThree"
                android:text="@string/Hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_4"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_3">

            <TextView
                android:id="@+id/question_4"
                style="@style/questionTheme"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/radioGroup4"
                style="@style/radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4_1" />

                <RadioButton
                    android:id="@+id/correctAnswer_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer4_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4_3" />

            </RadioGroup>

            <Button
                android:id="@+id/hintbutton_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintFour"
                android:text="@string/Hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_5"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_4">

            <TextView
                android:id="@+id/question_5"
                style="@style/questionTheme"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/radioGroup5"
                style="@style/radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer5_3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer5_1" />

                <RadioButton
                    android:id="@+id/correctAnswer_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer5_2" />

            </RadioGroup>

            <Button
                android:id="@+id/hintbutton_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintFive"
                android:text="@string/Hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_6"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_5">

            <TextView
                android:id="@+id/question_6"
                style="@style/questionTheme"
                android:text="@string/question_6" />

            <CheckBox
                android:id="@+id/virginia"
                style="@style/radioGroup"
                android:onClick="onCheckBoxSelection"
                android:text="@string/checkbox_virginia" />

            <CheckBox
                android:id="@+id/michigan"
                style="@style/radioGroup"
                android:text="@string/checkbox_michigan" />

            <CheckBox
                android:id="@+id/california"
                style="@style/radioGroup"
                android:text="@string/checkbox_california" />

            <CheckBox
                android:id="@+id/massachusetts"
                style="@style/radioGroup"
                android:onClick="onCheckBoxSelection"
                android:text="@string/checkbox_massachusetts" />

            <CheckBox
                android:id="@+id/texas"
                style="@style/radioGroup"
                android:text="@string/checkbox_texas" />

            <CheckBox
                android:id="@+id/idaho"
                style="@style/radioGroup"
                android:text="@string/checkbox_idaho" />

            <CheckBox
                android:id="@+id/georgia"
                style="@style/radioGroup"
                android:onClick="onCheckBoxSelection"
                android:text="@string/checkbox_georgia" />

            <Button
                android:id="@+id/hintbutton_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintSix"
                android:text="@string/Hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_block_7"
            style="@style/questionLayoutTheme"
            android:layout_below="@id/question_block_6">

            <TextView
                android:id="@+id/question_7"
                style="@style/questionTheme"
                android:text="@string/question_7" />

            <EditText
                android:id="@+id/questionSeven"
                style="@style/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint" />

            <Button
                android:id="@+id/hintbutton_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="toastHintSeven"
                android:text="@string/Hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/submit_reset_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_block_7">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="resetAll"
                android:text="@string/reset" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="checkResult"
                android:text="@string/submit" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_above="@id/submit_reset_area"
            android:background="@drawable/bordersroundshadow" />


    </RelativeLayout>


</ScrollView>
